[package]
name = "onyx"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", features = ["advanced", "canvas"]}
wgpu = "28.0.0"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.10.0"
